production env fixes